--- a/capstone.ipynb
+++ b/capstone.ipynb
@@ -14,9 +14,14 @@
     }
    ],
    "source": [
+    "#  Created for Coursera Capstone Project\n",
+    "\n",
+    "#  @author: Donnay F. Nahimana\n",
+    "#  v2020/03/29\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "print('Hello Capstone Project course!')"
+    "print('Hello Capstone Project course!')//"
    ]
   },
   {
@@ -24,7 +29,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    " "
+   ]
   }
  ],
  "metadata": {
