--- a/capstone.ipynb
+++ b/capstone.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "print('Hello Capstone Project course!')//"
+    "print('Hello Capstone Project course!')"
    ]
   },
   {
