--- a/capstone.ipynb
+++ b/capstone.ipynb
@@ -1,8 +1,29 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Created for Coursera Capstone Project\n",
+    "\n",
+    "@author: Donnay F. Nahimana\n",
+    "\n",
+    "v2020/03/29"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -14,13 +35,6 @@
     }
    ],
    "source": [
-    "#  Created for Coursera Capstone Project\n",
-    "\n",
-    "#  @author: Donnay F. Nahimana\n",
-    "#  v2020/03/29\n",
-    "\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
     "print('Hello Capstone Project course!')"
    ]
   },
@@ -29,9 +43,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    " "
-   ]
+   "source": []
   }
  ],
  "metadata": {
