--- a/Toronto_PostCode.ipynb
+++ b/Toronto_PostCode.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Toronto Neighborhood ###"
+    "# __Toronto Neighborhood__\n",
+    "\n",
+    "## Part 1"
    ]
   },
   {
@@ -30,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,17 +94,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.reset_index(inplace=True)\n",
-    "df.drop('index',axis=1,inplace=True)"
+    "PCdf=df.sort_values(by=['Postal code']).rename(columns={'Postal code': 'Postal Code'})\n",
+    "PCdf.reset_index(inplace=True)\n",
+    "PCdf.drop('index',axis=1,inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +129,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Postal code</th>\n",
+       "      <th>Postal Code</th>\n",
        "      <th>Borough</th>\n",
        "      <th>Neighborhood</th>\n",
        "    </tr>\n",
@@ -134,33 +137,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>M3A</td>\n",
-       "      <td>North York</td>\n",
-       "      <td>Parkwoods</td>\n",
+       "      <td>M1B</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Malvern , Rouge</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>M4A</td>\n",
-       "      <td>North York</td>\n",
-       "      <td>Victoria Village</td>\n",
+       "      <td>M1C</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Rouge Hill , Port Union , Highland Creek</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>M5A</td>\n",
-       "      <td>Downtown Toronto</td>\n",
-       "      <td>Regent Park , Harbourfront</td>\n",
+       "      <td>M1E</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Guildwood , Morningside , West Hill</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>M6A</td>\n",
-       "      <td>North York</td>\n",
-       "      <td>Lawrence Manor , Lawrence Heights</td>\n",
+       "      <td>M1G</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Woburn</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>M7A</td>\n",
-       "      <td>Downtown Toronto</td>\n",
-       "      <td>Queen's Park , Ontario Provincial Government</td>\n",
+       "      <td>M1H</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Cedarbrae</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -170,33 +173,33 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>98</th>\n",
-       "      <td>M8X</td>\n",
-       "      <td>Etobicoke</td>\n",
-       "      <td>The Kingsway , Montgomery Road , Old Mill North</td>\n",
+       "      <td>M9N</td>\n",
+       "      <td>York</td>\n",
+       "      <td>Weston</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>99</th>\n",
-       "      <td>M4Y</td>\n",
-       "      <td>Downtown Toronto</td>\n",
-       "      <td>Church and Wellesley</td>\n",
+       "      <td>M9P</td>\n",
+       "      <td>Etobicoke</td>\n",
+       "      <td>Westmount</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>100</th>\n",
-       "      <td>M7Y</td>\n",
-       "      <td>East Toronto</td>\n",
-       "      <td>Business reply mail Processing CentrE</td>\n",
+       "      <td>M9R</td>\n",
+       "      <td>Etobicoke</td>\n",
+       "      <td>Kingsview Village , St. Phillips , Martin Grov...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>101</th>\n",
-       "      <td>M8Y</td>\n",
+       "      <td>M9V</td>\n",
        "      <td>Etobicoke</td>\n",
-       "      <td>Old Mill South , King's Mill Park , Sunnylea ,...</td>\n",
+       "      <td>South Steeles , Silverstone , Humbergate , Jam...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>102</th>\n",
-       "      <td>M8Z</td>\n",
+       "      <td>M9W</td>\n",
        "      <td>Etobicoke</td>\n",
-       "      <td>Mimico NW , The Queensway West , South of Bloo...</td>\n",
+       "      <td>Northwest</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -204,47 +207,47 @@
        "</div>"
       ],
       "text/plain": [
-       "    Postal code           Borough  \\\n",
-       "0           M3A        North York   \n",
-       "1           M4A        North York   \n",
-       "2           M5A  Downtown Toronto   \n",
-       "3           M6A        North York   \n",
-       "4           M7A  Downtown Toronto   \n",
-       "..          ...               ...   \n",
-       "98          M8X         Etobicoke   \n",
-       "99          M4Y  Downtown Toronto   \n",
-       "100         M7Y      East Toronto   \n",
-       "101         M8Y         Etobicoke   \n",
-       "102         M8Z         Etobicoke   \n",
+       "    Postal Code      Borough  \\\n",
+       "0           M1B  Scarborough   \n",
+       "1           M1C  Scarborough   \n",
+       "2           M1E  Scarborough   \n",
+       "3           M1G  Scarborough   \n",
+       "4           M1H  Scarborough   \n",
+       "..          ...          ...   \n",
+       "98          M9N         York   \n",
+       "99          M9P    Etobicoke   \n",
+       "100         M9R    Etobicoke   \n",
+       "101         M9V    Etobicoke   \n",
+       "102         M9W    Etobicoke   \n",
        "\n",
        "                                          Neighborhood  \n",
-       "0                                            Parkwoods  \n",
-       "1                                     Victoria Village  \n",
-       "2                           Regent Park , Harbourfront  \n",
-       "3                    Lawrence Manor , Lawrence Heights  \n",
-       "4         Queen's Park , Ontario Provincial Government  \n",
+       "0                                      Malvern , Rouge  \n",
+       "1             Rouge Hill , Port Union , Highland Creek  \n",
+       "2                  Guildwood , Morningside , West Hill  \n",
+       "3                                               Woburn  \n",
+       "4                                            Cedarbrae  \n",
        "..                                                 ...  \n",
-       "98     The Kingsway , Montgomery Road , Old Mill North  \n",
-       "99                                Church and Wellesley  \n",
-       "100              Business reply mail Processing CentrE  \n",
-       "101  Old Mill South , King's Mill Park , Sunnylea ,...  \n",
-       "102  Mimico NW , The Queensway West , South of Bloo...  \n",
+       "98                                              Weston  \n",
+       "99                                           Westmount  \n",
+       "100  Kingsview Village , St. Phillips , Martin Grov...  \n",
+       "101  South Steeles , Silverstone , Humbergate , Jam...  \n",
+       "102                                          Northwest  \n",
        "\n",
        "[103 rows x 3 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df"
+    "PCdf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +259,191 @@
     }
    ],
    "source": [
-    "print(df.shape)"
+    "print(PCdf.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "-----------------------------------------------------------------------\n",
+    "## Part 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coord=pd.read_csv('Geospatial_Coordinates.csv') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Postal Code</th>\n",
+       "      <th>Borough</th>\n",
+       "      <th>Neighborhood</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>M1B</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Malvern , Rouge</td>\n",
+       "      <td>43.806686</td>\n",
+       "      <td>-79.194353</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>M1C</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Rouge Hill , Port Union , Highland Creek</td>\n",
+       "      <td>43.784535</td>\n",
+       "      <td>-79.160497</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>M1E</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Guildwood , Morningside , West Hill</td>\n",
+       "      <td>43.763573</td>\n",
+       "      <td>-79.188711</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>M1G</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Woburn</td>\n",
+       "      <td>43.770992</td>\n",
+       "      <td>-79.216917</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>M1H</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Cedarbrae</td>\n",
+       "      <td>43.773136</td>\n",
+       "      <td>-79.239476</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>M9N</td>\n",
+       "      <td>York</td>\n",
+       "      <td>Weston</td>\n",
+       "      <td>43.706876</td>\n",
+       "      <td>-79.518188</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>M9P</td>\n",
+       "      <td>Etobicoke</td>\n",
+       "      <td>Westmount</td>\n",
+       "      <td>43.696319</td>\n",
+       "      <td>-79.532242</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
+       "      <td>M9R</td>\n",
+       "      <td>Etobicoke</td>\n",
+       "      <td>Kingsview Village , St. Phillips , Martin Grov...</td>\n",
+       "      <td>43.688905</td>\n",
+       "      <td>-79.554724</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101</th>\n",
+       "      <td>M9V</td>\n",
+       "      <td>Etobicoke</td>\n",
+       "      <td>South Steeles , Silverstone , Humbergate , Jam...</td>\n",
+       "      <td>43.739416</td>\n",
+       "      <td>-79.588437</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>102</th>\n",
+       "      <td>M9W</td>\n",
+       "      <td>Etobicoke</td>\n",
+       "      <td>Northwest</td>\n",
+       "      <td>43.706748</td>\n",
+       "      <td>-79.594054</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>103 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Postal Code      Borough  \\\n",
+       "0           M1B  Scarborough   \n",
+       "1           M1C  Scarborough   \n",
+       "2           M1E  Scarborough   \n",
+       "3           M1G  Scarborough   \n",
+       "4           M1H  Scarborough   \n",
+       "..          ...          ...   \n",
+       "98          M9N         York   \n",
+       "99          M9P    Etobicoke   \n",
+       "100         M9R    Etobicoke   \n",
+       "101         M9V    Etobicoke   \n",
+       "102         M9W    Etobicoke   \n",
+       "\n",
+       "                                          Neighborhood   Latitude  Longitude  \n",
+       "0                                      Malvern , Rouge  43.806686 -79.194353  \n",
+       "1             Rouge Hill , Port Union , Highland Creek  43.784535 -79.160497  \n",
+       "2                  Guildwood , Morningside , West Hill  43.763573 -79.188711  \n",
+       "3                                               Woburn  43.770992 -79.216917  \n",
+       "4                                            Cedarbrae  43.773136 -79.239476  \n",
+       "..                                                 ...        ...        ...  \n",
+       "98                                              Weston  43.706876 -79.518188  \n",
+       "99                                           Westmount  43.696319 -79.532242  \n",
+       "100  Kingsview Village , St. Phillips , Martin Grov...  43.688905 -79.554724  \n",
+       "101  South Steeles , Silverstone , Humbergate , Jam...  43.739416 -79.588437  \n",
+       "102                                          Northwest  43.706748 -79.594054  \n",
+       "\n",
+       "[103 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "PCdf.merge(coord,on='Postal Code')"
    ]
   },
   {
