--- a/Toronto_New_Hospital.ipynb
+++ b/Toronto_New_Hospital.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1 align=center><font size = 6>New hospital in Greater Toronto area</font></h1>"
+    "<h1 align=center>New hospital in Greater Toronto area</h1>"
    ]
   },
   {
