--- a/Toronto_New_Hospital.ipynb
+++ b/Toronto_New_Hospital.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1 align=center>New hospital in Greater Toronto area</h1>"
+    "# New hospital in Greater Toronto area"
    ]
   },
   {
